--- a/index.html
+++ b/index.html
@@ -8,82 +8,84 @@
         /* General Styles */
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            background: linear-gradient(135deg, #1a1a2e, #16213e); /* Dark gradient background */
+            color: #e0e0e0; /* Light text for contrast */
             margin: 0;
             padding: 0;
             line-height: 1.6;
         }
         .container {
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
         header {
             text-align: center;
-            padding: 60px 0;
-            background: linear-gradient(135deg, #6200ee, #3700b3);
-            color: #ffffff;
-            border-radius: 10px;
-            margin-bottom: 30px;
+            padding: 80px 0;
+            background: rgba(255, 255, 255, 0.1); /* Glassmorphism effect */
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            margin-bottom: 40px;
             animation: fadeIn 1.5s ease-in-out;
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
         header h1 {
-            font-size: 3em;
+            font-size: 3.5em;
             margin: 0;
+            color: #00ff88; /* Neon green for the title */
             animation: slideIn 1s ease-in-out;
         }
         header p {
             font-size: 1.4em;
-            color: #e0e0e0;
+            color: #a0a0a0; /* Light gray for subtitle */
             animation: slideIn 1.2s ease-in-out;
         }
         .section {
-            margin-bottom: 50px;
+            margin-bottom: 60px;
             animation: fadeIn 1.5s ease-in-out;
         }
         .section h2 {
-            font-size: 2em;
-            color: #6200ee;
-            border-bottom: 3px solid #6200ee;
-            padding-bottom: 10px;
+            font-size: 2.5em;
+            color: #00ff88; /* Neon green for section headings */
             margin-bottom: 20px;
             animation: slideIn 1s ease-in-out;
         }
         .skills, .projects, .experience, .education {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
+            gap: 30px;
         }
         .skills div, .projects div, .experience div, .education div {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: rgba(255, 255, 255, 0.1); /* Glassmorphism effect */
+            backdrop-filter: blur(10px);
+            padding: 25px;
+            border-radius: 15px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
         }
         .skills div:hover, .projects div:hover, .experience div:hover, .education div:hover {
             transform: translateY(-10px);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 20px rgba(0, 255, 136, 0.3); /* Neon green shadow */
+            background: rgba(255, 255, 255, 0.2);
         }
         .skills h3, .projects h3, .experience h3, .education h3 {
             margin-top: 0;
-            color: #6200ee;
-            font-size: 1.5em;
+            color: #00ff88; /* Neon green for subheadings */
+            font-size: 1.8em;
         }
         a {
-            color: #6200ee;
+            color: #00ff88; /* Neon green for links */
             text-decoration: none;
             transition: color 0.3s ease;
         }
         a:hover {
-            color: #3700b3;
+            color: #00cc66; /* Slightly darker green on hover */
             text-decoration: underline;
         }
         footer {
             text-align: center;
-            padding: 30px 0;
-            color: #666;
+            padding: 40px 0;
+            color: #a0a0a0;
             font-size: 1em;
             animation: fadeIn 1.5s ease-in-out;
         }
