--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
             <h2>Projects</h2>
             <div class="projects">
                 <div>
-                    <h3>CivAPI</h3>
+                    <h3> <a href=https://github.com/Lunnaris01/CivAPI>CivAPI</a></h3>
                     <p>RESTful Backend + Frontend for Civilization VI Data</p>
                     <p>Technologies: Go, SQLite (Turso), Chi, Docker, CI/CD (GitHub Actions)</p>
                     <p>Features: Authentication, Game Data Storage, Game Statistics</p>
                 </div>
                 <div>
-                    <h3>XAIEV</h3>
+                    <h3> <a href=https://github.com/cknoll/xaiev>XAIEV</a></h3>
                     <p>Systematic Comparison of CNNs and XAI Methods</p>
                     <p>Technologies: Python, PyTorch, Captum, OpenCV</p>
                     <p>Features: CNN Training, XAI Method Evaluation (Grad-CAM, LIME)</p>
